--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -156,7 +156,7 @@ Topography, climate, and lithology all play important roles in modulating chemic
 
 To estimate the decrease in steady state \pCOtwo associated with the increase in global weatherability associated with the increase of subaerially-exposed land area in I\&NG, we use the spatially-resolved GEOCLIM model \citep{Godderis2014a, Godderis2017c} wherein a silicate weathering model is coupled to global climate models run at varying \pCOtwo levels. We use the DynSoil implementation of the \citet{Gabet2009a} regolith development model which integrates a climatic dependence on chemical weathering using the formulation of \cite{West2012a}.
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption by silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a} with the 16 lithologic categories represented in GLiM grouped into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (Fig. SX). Each continental grid cell is assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are then assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in data compiled from the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate grid cells does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored in this analysis. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on its protolith. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM (see below).
+The silicate weathering component of GEOCLIM calculates \COtwo consumption by silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a} with the 16 lithologic categories represented in GLiM grouped into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are then assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in data compiled from the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate grid cells does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored in this analysis. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on its protolith. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM.
 
 Of the various parameters used in the equations that govern the silicate weathering component of GEOCLIM (see SI), four parameters in particular are poorly constrained in the existing literature: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$). As discussed above, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. Rather than prescribing values for these six parameters, we instead allow these parameters to vary within reasonable bounds, resulting in a total of 78,000 unique parameter combinations. For each of these combinations, we compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg consumption) using present-day runoff, temperature, and slope fields. Following the approach of \citet{Maffre2018a}, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. We then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins. We eliminate all parameter combinations that result in unreasonable total global \COtwo consumption (which we define to be \textless1$\times$10$^{12}$~mol/yr or \textgreater1$\times$10$^{13}$~mol/yr) and/or result in a low $r^{2}$ (which we define to be \textless0.4). This calibration method leaves 3,339 unique parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day.
 
@@ -170,9 +170,9 @@ To explore the sensitivity of global weatherability and climate state to the eme
 
 Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598-729~ppm (5-95 percentile values), the ``reduced I\&NG'' scenario of 547-638~ppm, and the ``reduced I\&NG + Sunda Shelf'' of 533-611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-Industrial \pCOtwo would have been $\sim$500-700~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is relatively small, given the low Mg+Ca concentration of the lithologies that comprise the Sunda Shelf as well as its low slope. These GEOCLIM \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \citep{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is itself sufficient to explain climate change over the Neogene.
 
-I\&NG are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. In New Guinea, these paleogeographic features originated in the Middle Miocene with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which resulted in the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. The Middle Miocene (16-14~Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt \citep{Cloos2005a}. This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12~Ma \citep{vanUfford2005a}. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift under New Guinea \citep{Cloos2005a}. After arc-continent collision in New Guinea, a left-lateral strike-slip margin developed on the northern margin \citep{Baldwin2012a}. Over the past 4~m.y., this change in plate motion caused the westward extrusion and exhumation of the Cretaceous to Oligocene ophiolites of Obi, Halmahera, and northern New Guinea \citep{Baldwin2012a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus (Abbott et al., 1994) and thermochronology (Hill \& Gleadow, 1989). 
+I\&NG are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. In New Guinea, these paleogeographic features originated in the Middle Miocene with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which resulted in the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. The Middle Miocene (16-14~Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt \citep{Cloos2005a}. This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12~Ma \citep{vanUfford2005a}. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift under New Guinea \citep{Cloos2005a}. After arc-continent collision in New Guinea, a left-lateral strike-slip margin developed on the northern margin \citep{Baldwin2012a}. Over the past 4~m.y., this change in plate motion caused the westward extrusion and exhumation of the Cretaceous to Oligocene ophiolites of Obi, Halmahera, and northern New Guinea \citep{Baldwin2012a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. 
 
-Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013a}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. (Audley-Charles, 1986).
+Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013a}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}.
 
 Our paleoshoreline reconstructions show a broad increase in exposed land area over the Neogene and an acceleration over the past 4~m.y. This trend is due to progressive arc-continent collision from west to east that has culminated with increased exhumation in the Banda Arc and New Guinea in the past 4~m.y. This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4~m.y that culminated in the initiation of the Northern Hemisphere ice sheets. Not only does the timing of the increase in subaerially-exposed land area of I\&NG coincide with the cooling trend, but our coupled weathering-climate model demonstrates that the magnitude of change in \pCOtwo due to these changes is sufficient to explain climate change over the Neogene.
 
@@ -206,7 +206,7 @@ We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their contrib
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2.pdf}
-    \caption{Box shows quartiles, whiskers show 1.5$\times$ the interquartile range, notch shows median with 95\% confidence interval. Each dot shows a parameter combination. Dashed line is PI \pCOtwo.}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the six scenarios, each point represents an estimate from one of the 3,339 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched measured \COtwo consumption in watersheds across the world during calibration (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to 1.5$\times$ the interquartile range, or to the minimum/maximum of the estimates if no estimates are below/above this range.}
     \label{fig:scenario_pCO2}
 \end{figure}
 
